tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__remove.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized()
---
🔄 [36m[36mRemoving [1mto-remove[22m worktree & branch in background (same commit as main)[39m[39m
