tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__switch_with_execute.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized().as_ref()
---
✅ [32mCreated new worktree for [1m[32mtest-exec[0m[32m, changed directory to [1m[32m[TMPDIR]/test-repo.test-exec[0m
🔄 [36mExecuting (--execute):[0m
[40m [0m  [1m[34mecho[0m executed[0m

executed
