tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__wrapper_preserves_progress_messages.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized().as_ref()
---
✅ [32mCreated new worktree for [1m[32mfeature-bg[0m[32m, changed directory to [1m[32m[TMPDIR]/test-repo.feature-bg[0m
🔄 [36mRunning post-start:[0m
[40m [0m  [1m[34mecho[0m [32m'background task'[0m[0m
